--- a/Week-4/package.json
+++ b/Week-4/package.json
@@ -1,6 +1,6 @@
 {
   "name": "week-4",
-  "version": "1.0.0",   //? MAJOR.MINOR.PATCH
+  "version": "1.0.0", 
   "description": "",
   "main": "index.js",
   "scripts": {
